--- a/HyperMetro/The shortest route/task-info.yaml
+++ b/HyperMetro/The shortest route/task-info.yaml
@@ -801,5 +801,29 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/learn/step/10344#comment
-status: Unchecked
+status: Failed
+feedback:
+  message: |-
+    Wrong answer in test #8
+
+    Your program printed an incorrect number of stations in the route.
+    Expected: 5 stations and 2 transitions. Output should be 9 lines.
+    Your output: 7 lines
+
+    Please find below the output of your program during this failed test.
+    Note that the &#39;&gt;&#39; character indicates the beginning of the input line.
+
+    ---
+
+    Arguments: ./test/prague.json
+
+    &gt; /route &quot;Linka C&quot; &quot;Vysehrad&quot; &quot;Linka B&quot; &quot;Namesti Republiky&quot;
+    Vysehrad
+    I.P.Pavlova
+    Muzeum
+    Mustek
+    Transition to line Linka B
+    Mustek
+    Namesti Republiky
+  time: Fri, 19 Aug 2022 11:08:41 UTC
 record: -1
